Use the schema index to suggest properties in the schema alignment dialog. Fixed minor bug in triple loader transposer that wrote a bad triple for each literal cell value.
git-svn-id: http://google-refine.googlecode.com/svn/trunk@112 7d457c2a-affb-35e4-300a-418c747d4874

--- a/src/main/webapp/styles/schema-alignment-dialog.css
+++ b/src/main/webapp/styles/schema-alignment-dialog.css
@@ -125,3 +125,18 @@ table.schema-align-node-dialog-layout2 > tbody > tr:last-child > td {
     overflow: auto;
     border: 1px solid #ddd;
 }
+
+/*--------------------------------------------------
+ *  Link dialog
+ *--------------------------------------------------
+ */
+
+.schema-alignment-link-menu-type-search {
+    padding: 8px;
+}
+
+.schema-alignment-link-menu-type-search2 {
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 3px;
+}
